# comp-prog

./: .gitignore  README.md
codeforces/: 1102A.cpp  1102B.cpp  745-dsj-set-hongcow.cpp
codeforces/Round533/: 1105A.cpp  1105B.cpp  1105C.cpp
codeforces/Round537/: 1111A.cpp  1111B.cpp  1111C.cpp
codeforces/RoundForethoughtFutureCup/: taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp
codeforces/practice/: 1108C-nice-garlands.cpp  1108D-diverse-garlands.cpp
epilight/: CMakeLists.txt
epilight/src/: 1-bit-ops.cpp
geeksforgeeks/: copy-list.cpp  distinct-substrings.cpp  lcs-three-strings.cpp
google/: duplicate-subarrys.cpp
google/duplicate-subarrys.tests/: tc2_in.txt
hackerrank/algorithms/bits/: lonely-int.cpp
hackerrank/algorithms/dynamic-prog/: coin-change.cpp  equal.cpp  police-operation.11.exp  police-operation.4.exp  police-operation.7.exp  police-operation.cpp  sherlock-and-cost.cpp
hackerrank/algorithms/graph-theory/: even-tree.cpp  (+3 more)
interviewbit/arrays/: add-one-to-number.cpp  anti-diagonals.cpp  duplicate-in-array.cpp
interviewbit/math/: is-palindrome.cpp  sorted-permutation-rank.cpp
leetcode/: lc41-first-missing-positive.cpp  longest-word-in-dict.cpp  median-finder.cpp
other/doors_and_strings/: DoorsAndStrings.hs
other/median_of_3/: median.xlsx  median_of_3.cpp
other/misc/: 1260.cpp  1260_eldar.cpp  1353.cpp  ChernobylEagles.hs  spiral.cpp
spoj/classical/: seinfeld.cpp  transform-expression.cpp
timus/: 1222.hs  1260.cpp
uva/: 10029-edit-step-ladders.cpp  10034-freckles-prim.cpp  10034.gen.py  10039-railroads.cpp  11101-mall-mania.cpp
(+63 files in other folders)
